// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simulation Configuration should disable submit button and show loading animation to button 1`] = `
<div>
  <div
    class="graph-input"
  >
    <form
      class="user-inputs"
      data-testid="simulationForm"
    >
      <div
        class="form-row"
      >
        <div
          class="col inputs"
        >
          <fieldset>
            <fieldset>
              <legend>
                Population
              </legend>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="number_of_agents"
                >
                  Number of Agents
                </label>
                <input
                  aria-describedby="number_of_agents"
                  class="form-control form-control-sm"
                  id="number_of_agents"
                  name="number_of_agents"
                  placeholder="Number of Agents"
                  type="number"
                  value="10000"
                />
              </div>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="public_transport_percentage"
                >
                  Public Transport Percentage
                </label>
                <input
                  aria-describedby="public_transport_percentage"
                  class="form-control form-control-sm"
                  id="public_transport_percentage"
                  name="public_transport_percentage"
                  placeholder="Public Transport Percentage"
                  step="any"
                  type="number"
                  value="0.2"
                />
              </div>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="working_percentage"
                >
                  Working Percentage
                </label>
                <input
                  aria-describedby="working_percentage"
                  class="form-control form-control-sm"
                  id="working_percentage"
                  max="1"
                  min="0"
                  name="working_percentage"
                  placeholder="Working Percentage"
                  step="any"
                  type="number"
                  value="0.7"
                />
              </div>
            </fieldset>
            <fieldset>
              <fieldset>
                <div
                  class="input-control"
                >
                  <label
                    class="col-form-label-sm"
                    for="grid_size"
                  >
                    Grid Size
                  </label>
                  <input
                    aria-describedby="grid_size"
                    class="form-control form-control-sm"
                    id="grid_size"
                    name="grid_size"
                    placeholder="Grid Size"
                    type="number"
                    value="250"
                  />
                </div>
                <div
                  class="input-control"
                >
                  <label
                    class="col-form-label-sm"
                    for="hospital_beds_percentage"
                  >
                    Hospital Beds Percentage
                  </label>
                  <input
                    aria-describedby="hospital_beds_percentage"
                    class="form-control form-control-sm"
                    id="hospital_beds_percentage"
                    max="1"
                    min="0"
                    name="hospital_beds_percentage"
                    placeholder="Hospital Beds Percentage"
                    step="any"
                    type="number"
                    value="0.003"
                  />
                </div>
              </fieldset>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="simulation_hrs"
                >
                  Simulation Hours
                </label>
                <input
                  aria-describedby="simulation_hrs"
                  class="form-control form-control-sm"
                  id="simulation_hrs"
                  name="simulation_hrs"
                  placeholder="Simulation Hours"
                  type="number"
                  value="10000"
                />
              </div>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="number_of_simulations"
                >
                  Number of simulations
                </label>
                <input
                  aria-describedby="number_of_simulations"
                  class="form-control form-control-sm"
                  id="number_of_simulations"
                  min="1"
                  name="number_of_simulations"
                  placeholder="Number of simulations"
                  step="1"
                  type="number"
                  value="1"
                />
              </div>
              <div
                class="custom-control custom-switch switch-right"
              >
                <input
                  class="custom-control-input"
                  disabled=""
                  id="generate_grid_vis"
                  name="generate_grid_vis"
                  type="checkbox"
                />
                <label
                  class="custom-control-label col-form-label-sm"
                  for="generate_grid_vis"
                >
                  Grid Visualization
                </label>
                <small
                  class="form-text text-muted"
                >
                  Allowed when grid size less than 101 and single simulation ran
                </small>
              </div>
            </fieldset>
            <div
              class="input-control tags-wrap"
            >
              <label
                class="font-weight-bold col-form-label-sm"
                for="tag-input"
              >
                Tags
              </label>
              <select
                data-testid="select"
                id="tags"
                name="tags"
              />
            </div>
          </fieldset>
          <fieldset>
            <legend>
              Disease Dynamics
            </legend>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="disease_name"
              >
                Disease Name
              </label>
              <select
                aria-describedby="disease_name"
                class="form-control form-control-sm"
                data-testid="select-disease"
                id="disease_name"
                name="disease_name"
                placeholder="Disease Name"
              >
                <option
                  value="small_pox"
                >
                  Small Pox
                </option>
                <option
                  value="sars"
                >
                  SARS
                </option>
                <option
                  value="covid_19"
                >
                  COVID-19
                </option>
              </select>
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="regular_transmission_start_day"
              >
                Regular Transmission Start Day
              </label>
              <input
                aria-describedby="regular_transmission_start_day"
                class="form-control form-control-sm"
                id="regular_transmission_start_day"
                name="regular_transmission_start_day"
                placeholder="Regular Transmission Start Day"
                step="any"
                type="number"
                value="10"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="high_transmission_start_day"
              >
                High Transmission Start Day
              </label>
              <input
                aria-describedby="high_transmission_start_day"
                class="form-control form-control-sm"
                id="high_transmission_start_day"
                name="high_transmission_start_day"
                placeholder="High Transmission Start Day"
                step="any"
                type="number"
                value="16"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="last_day"
              >
                Last Day
              </label>
              <input
                aria-describedby="last_day"
                class="form-control form-control-sm"
                id="last_day"
                name="last_day"
                placeholder="Last Day"
                step="any"
                type="number"
                value="22"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="asymptomatic_last_day"
              >
                Asymptomatic Last Day
              </label>
              <input
                aria-describedby="asymptomatic_last_day"
                class="form-control form-control-sm"
                id="asymptomatic_last_day"
                name="asymptomatic_last_day"
                placeholder="Asymptomatic Last Day"
                step="any"
                type="number"
                value="22"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="mild_infected_last_day"
              >
                Mild Infected Last Day
              </label>
              <input
                aria-describedby="mild_infected_last_day"
                class="form-control form-control-sm"
                id="mild_infected_last_day"
                name="mild_infected_last_day"
                placeholder="Mild Infected Last Day"
                step="any"
                type="number"
                value="22"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="regular_transmission_rate"
              >
                Regular Transmission Rate
              </label>
              <input
                aria-describedby="regular_transmission_rate"
                class="form-control form-control-sm"
                id="regular_transmission_rate"
                max="1"
                min="0"
                name="regular_transmission_rate"
                placeholder="Regular Transmission Rate"
                step="any"
                type="number"
                value="0.05"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="high_transmission_rate"
              >
                High Transmission Rate
              </label>
              <input
                aria-describedby="high_transmission_rate"
                class="form-control form-control-sm"
                id="high_transmission_rate"
                max="1"
                min="0"
                name="high_transmission_rate"
                placeholder="High Transmission Rate"
                step="any"
                type="number"
                value="0.5"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="death_rate"
              >
                Death Rate
              </label>
              <input
                aria-describedby="death_rate"
                class="form-control form-control-sm"
                id="death_rate"
                max="1"
                min="0"
                name="death_rate"
                placeholder="Death Rate"
                step="any"
                type="number"
                value="0.2"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="percentage_asymptomatic_population"
              >
                Asymptomatic percentage
              </label>
              <input
                aria-describedby="percentage_asymptomatic_population"
                class="form-control form-control-sm"
                id="percentage_asymptomatic_population"
                max="1"
                min="0"
                name="percentage_asymptomatic_population"
                placeholder="Asymptomatic percentage"
                step="any"
                type="number"
                value="0"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="percentage_severe_infected_population"
              >
                % Severe Infected Population
              </label>
              <input
                aria-describedby="percentage_severe_infected_population"
                class="form-control form-control-sm"
                id="percentage_severe_infected_population"
                max="1"
                min="0"
                name="percentage_severe_infected_population"
                placeholder="Percentage Severe Infected Population"
                step="any"
                type="number"
                value="1"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="exposed_duration"
              >
                Exposed Duration
              </label>
              <input
                aria-describedby="exposed_duration"
                class="form-control form-control-sm"
                id="exposed_duration"
                name="exposed_duration"
                placeholder="Exposed Duration"
                step="any"
                type="number"
                value="0"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="pre_symptomatic_duration"
              >
                Pre symptomatic Duration
              </label>
              <input
                aria-describedby="pre_symptomatic_duration"
                class="form-control form-control-sm"
                id="pre_symptomatic_duration"
                name="pre_symptomatic_duration"
                placeholder="Pre symptomatic Duration"
                step="any"
                type="number"
                value="0"
              />
            </div>
          </fieldset>
          <fieldset>
            <legend>
              Interventions
            </legend>
            <small
              class="form-text text-muted"
            >
              Only the active interventions will be taken into consideration
            </small>
            <div
              class="custom-control custom-switch switch-right"
            >
              <input
                checked=""
                class="custom-control-input"
                id="vaccine-switch"
                type="checkbox"
              />
              <label
                class="custom-control-label col-form-label-sm"
                for="vaccine-switch"
              >
                Vaccination
              </label>
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="vaccinate_at"
              >
                Vaccinate At
              </label>
              <input
                aria-describedby="vaccinate_at"
                class="form-control form-control-sm"
                id="vaccinate_at"
                name="vaccinate_at"
                placeholder="Vaccinate At"
                type="number"
                value="5000"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="vaccinate_percentage"
              >
                Vaccinate Percentage
              </label>
              <input
                aria-describedby="vaccinate_percentage"
                class="form-control form-control-sm"
                id="vaccinate_percentage"
                name="vaccinate_percentage"
                placeholder="Vaccinate Percentage"
                step="any"
                type="number"
                value="0.2"
              />
            </div>
            <div
              class="custom-control custom-switch switch-right"
            >
              <input
                checked=""
                class="custom-control-input"
                id="lockdown-switch"
                type="checkbox"
              />
              <label
                class="custom-control-label col-form-label-sm"
                for="lockdown-switch"
              >
                Lockdown
              </label>
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="lockdown_at_number_of_infections"
              >
                Lockdown at number of infections
              </label>
              <input
                aria-describedby="lockdown_at_number_of_infections"
                class="form-control form-control-sm"
                id="lockdown_at_number_of_infections"
                name="lockdown_at_number_of_infections"
                placeholder="Lockdown At(number of infections)"
                step="any"
                type="number"
                value="100"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="essential_workers_population"
              >
                Essentials Workers Population
              </label>
              <input
                aria-describedby="essential_workers_population"
                class="form-control form-control-sm"
                id="essential_workers_population"
                name="essential_workers_population"
                placeholder="Emergency Workers Population"
                step="any"
                type="number"
                value="0.1"
              />
            </div>
            <div
              class="custom-control custom-switch switch-right"
            >
              <input
                checked=""
                class="custom-control-input"
                id="hospital-switch"
                type="checkbox"
              />
              <label
                class="custom-control-label col-form-label-sm"
                for="hospital-switch"
              >
                Hospital Spread
              </label>
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="hospital_spread_rate_threshold"
              >
                Hospital Spread Rate Threshold
              </label>
              <input
                aria-describedby="hospital_spread_rate_threshold"
                class="form-control form-control-sm"
                id="hospital_spread_rate_threshold"
                name="hospital_spread_rate_threshold"
                placeholder="Hospital Spread Rate Threshold"
                step="any"
                type="number"
                value="100"
              />
            </div>
          </fieldset>
        </div>
        <div
          class="col actions"
        >
          <button
            class="btn btn-primary btn-lg"
            disabled=""
            id="submitBtn"
            type="submit"
          >
            <span
              class="spinner-grow spinner-grow-lg"
            />
            <span
              class="button-text"
            >
               Submitting..
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Simulation Configuration should invoke fetch on form submit 1`] = `
Object {
  "asymptomatic_last_day": 22,
  "death_rate": 0.2,
  "disease_name": "small_pox",
  "enable_citizen_state_messages": false,
  "essential_workers_population": 0.1,
  "exposed_duration": 0,
  "grid_size": 250,
  "high_transmission_rate": 0.5,
  "high_transmission_start_day": 16,
  "hospital_beds_percentage": 0.003,
  "hospital_spread_rate_threshold": 100,
  "last_day": 22,
  "lockdown_at_number_of_infections": 100,
  "mild_infected_last_day": 22,
  "number_of_agents": 10000,
  "number_of_simulations": 1,
  "percentage_asymptomatic_population": 0,
  "percentage_severe_infected_population": 1,
  "pre_symptomatic_duration": 0,
  "public_transport_percentage": 0.2,
  "regular_transmission_rate": 0.05,
  "regular_transmission_start_day": 10,
  "simulation_hrs": 10000,
  "vaccinate_at": 5000,
  "vaccinate_percentage": 0.2,
  "working_percentage": 0.7,
}
`;

exports[`Simulation Configuration should render with defaults 1`] = `
<DocumentFragment>
  <div
    class="graph-input"
  >
    <form
      class="user-inputs"
      data-testid="simulationForm"
    >
      <div
        class="form-row"
      >
        <div
          class="col inputs"
        >
          <fieldset>
            <fieldset>
              <legend>
                Population
              </legend>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="number_of_agents"
                >
                  Number of Agents
                </label>
                <input
                  aria-describedby="number_of_agents"
                  class="form-control form-control-sm"
                  id="number_of_agents"
                  name="number_of_agents"
                  placeholder="Number of Agents"
                  type="number"
                  value="10000"
                />
              </div>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="public_transport_percentage"
                >
                  Public Transport Percentage
                </label>
                <input
                  aria-describedby="public_transport_percentage"
                  class="form-control form-control-sm"
                  id="public_transport_percentage"
                  name="public_transport_percentage"
                  placeholder="Public Transport Percentage"
                  step="any"
                  type="number"
                  value="0.2"
                />
              </div>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="working_percentage"
                >
                  Working Percentage
                </label>
                <input
                  aria-describedby="working_percentage"
                  class="form-control form-control-sm"
                  id="working_percentage"
                  max="1"
                  min="0"
                  name="working_percentage"
                  placeholder="Working Percentage"
                  step="any"
                  type="number"
                  value="0.7"
                />
              </div>
            </fieldset>
            <fieldset>
              <fieldset>
                <div
                  class="input-control"
                >
                  <label
                    class="col-form-label-sm"
                    for="grid_size"
                  >
                    Grid Size
                  </label>
                  <input
                    aria-describedby="grid_size"
                    class="form-control form-control-sm"
                    id="grid_size"
                    name="grid_size"
                    placeholder="Grid Size"
                    type="number"
                    value="250"
                  />
                </div>
                <div
                  class="input-control"
                >
                  <label
                    class="col-form-label-sm"
                    for="hospital_beds_percentage"
                  >
                    Hospital Beds Percentage
                  </label>
                  <input
                    aria-describedby="hospital_beds_percentage"
                    class="form-control form-control-sm"
                    id="hospital_beds_percentage"
                    max="1"
                    min="0"
                    name="hospital_beds_percentage"
                    placeholder="Hospital Beds Percentage"
                    step="any"
                    type="number"
                    value="0.003"
                  />
                </div>
              </fieldset>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="simulation_hrs"
                >
                  Simulation Hours
                </label>
                <input
                  aria-describedby="simulation_hrs"
                  class="form-control form-control-sm"
                  id="simulation_hrs"
                  name="simulation_hrs"
                  placeholder="Simulation Hours"
                  type="number"
                  value="10000"
                />
              </div>
              <div
                class="input-control"
              >
                <label
                  class="col-form-label-sm"
                  for="number_of_simulations"
                >
                  Number of simulations
                </label>
                <input
                  aria-describedby="number_of_simulations"
                  class="form-control form-control-sm"
                  id="number_of_simulations"
                  min="1"
                  name="number_of_simulations"
                  placeholder="Number of simulations"
                  step="1"
                  type="number"
                  value="1"
                />
              </div>
              <div
                class="custom-control custom-switch switch-right"
              >
                <input
                  class="custom-control-input"
                  disabled=""
                  id="generate_grid_vis"
                  name="generate_grid_vis"
                  type="checkbox"
                />
                <label
                  class="custom-control-label col-form-label-sm"
                  for="generate_grid_vis"
                >
                  Grid Visualization
                </label>
                <small
                  class="form-text text-muted"
                >
                  Allowed when grid size less than 101 and single simulation ran
                </small>
              </div>
            </fieldset>
            <div
              class="input-control tags-wrap"
            >
              <label
                class="font-weight-bold col-form-label-sm"
                for="tag-input"
              >
                Tags
              </label>
              <select
                data-testid="select"
                id="tags"
                name="tags"
              />
            </div>
          </fieldset>
          <fieldset>
            <legend>
              Disease Dynamics
            </legend>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="disease_name"
              >
                Disease Name
              </label>
              <select
                aria-describedby="disease_name"
                class="form-control form-control-sm"
                data-testid="select-disease"
                id="disease_name"
                name="disease_name"
                placeholder="Disease Name"
              >
                <option
                  value="small_pox"
                >
                  Small Pox
                </option>
                <option
                  value="sars"
                >
                  SARS
                </option>
                <option
                  value="covid_19"
                >
                  COVID-19
                </option>
              </select>
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="regular_transmission_start_day"
              >
                Regular Transmission Start Day
              </label>
              <input
                aria-describedby="regular_transmission_start_day"
                class="form-control form-control-sm"
                id="regular_transmission_start_day"
                name="regular_transmission_start_day"
                placeholder="Regular Transmission Start Day"
                step="any"
                type="number"
                value="10"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="high_transmission_start_day"
              >
                High Transmission Start Day
              </label>
              <input
                aria-describedby="high_transmission_start_day"
                class="form-control form-control-sm"
                id="high_transmission_start_day"
                name="high_transmission_start_day"
                placeholder="High Transmission Start Day"
                step="any"
                type="number"
                value="16"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="last_day"
              >
                Last Day
              </label>
              <input
                aria-describedby="last_day"
                class="form-control form-control-sm"
                id="last_day"
                name="last_day"
                placeholder="Last Day"
                step="any"
                type="number"
                value="22"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="asymptomatic_last_day"
              >
                Asymptomatic Last Day
              </label>
              <input
                aria-describedby="asymptomatic_last_day"
                class="form-control form-control-sm"
                id="asymptomatic_last_day"
                name="asymptomatic_last_day"
                placeholder="Asymptomatic Last Day"
                step="any"
                type="number"
                value="22"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="mild_infected_last_day"
              >
                Mild Infected Last Day
              </label>
              <input
                aria-describedby="mild_infected_last_day"
                class="form-control form-control-sm"
                id="mild_infected_last_day"
                name="mild_infected_last_day"
                placeholder="Mild Infected Last Day"
                step="any"
                type="number"
                value="22"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="regular_transmission_rate"
              >
                Regular Transmission Rate
              </label>
              <input
                aria-describedby="regular_transmission_rate"
                class="form-control form-control-sm"
                id="regular_transmission_rate"
                max="1"
                min="0"
                name="regular_transmission_rate"
                placeholder="Regular Transmission Rate"
                step="any"
                type="number"
                value="0.05"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="high_transmission_rate"
              >
                High Transmission Rate
              </label>
              <input
                aria-describedby="high_transmission_rate"
                class="form-control form-control-sm"
                id="high_transmission_rate"
                max="1"
                min="0"
                name="high_transmission_rate"
                placeholder="High Transmission Rate"
                step="any"
                type="number"
                value="0.5"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="death_rate"
              >
                Death Rate
              </label>
              <input
                aria-describedby="death_rate"
                class="form-control form-control-sm"
                id="death_rate"
                max="1"
                min="0"
                name="death_rate"
                placeholder="Death Rate"
                step="any"
                type="number"
                value="0.2"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="percentage_asymptomatic_population"
              >
                Asymptomatic percentage
              </label>
              <input
                aria-describedby="percentage_asymptomatic_population"
                class="form-control form-control-sm"
                id="percentage_asymptomatic_population"
                max="1"
                min="0"
                name="percentage_asymptomatic_population"
                placeholder="Asymptomatic percentage"
                step="any"
                type="number"
                value="0"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="percentage_severe_infected_population"
              >
                % Severe Infected Population
              </label>
              <input
                aria-describedby="percentage_severe_infected_population"
                class="form-control form-control-sm"
                id="percentage_severe_infected_population"
                max="1"
                min="0"
                name="percentage_severe_infected_population"
                placeholder="Percentage Severe Infected Population"
                step="any"
                type="number"
                value="1"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="exposed_duration"
              >
                Exposed Duration
              </label>
              <input
                aria-describedby="exposed_duration"
                class="form-control form-control-sm"
                id="exposed_duration"
                name="exposed_duration"
                placeholder="Exposed Duration"
                step="any"
                type="number"
                value="0"
              />
            </div>
            <div
              class="input-control d-none"
            >
              <label
                class="col-form-label-sm"
                for="pre_symptomatic_duration"
              >
                Pre symptomatic Duration
              </label>
              <input
                aria-describedby="pre_symptomatic_duration"
                class="form-control form-control-sm"
                id="pre_symptomatic_duration"
                name="pre_symptomatic_duration"
                placeholder="Pre symptomatic Duration"
                step="any"
                type="number"
                value="0"
              />
            </div>
          </fieldset>
          <fieldset>
            <legend>
              Interventions
            </legend>
            <small
              class="form-text text-muted"
            >
              Only the active interventions will be taken into consideration
            </small>
            <div
              class="custom-control custom-switch switch-right"
            >
              <input
                checked=""
                class="custom-control-input"
                id="vaccine-switch"
                type="checkbox"
              />
              <label
                class="custom-control-label col-form-label-sm"
                for="vaccine-switch"
              >
                Vaccination
              </label>
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="vaccinate_at"
              >
                Vaccinate At
              </label>
              <input
                aria-describedby="vaccinate_at"
                class="form-control form-control-sm"
                id="vaccinate_at"
                name="vaccinate_at"
                placeholder="Vaccinate At"
                type="number"
                value="5000"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="vaccinate_percentage"
              >
                Vaccinate Percentage
              </label>
              <input
                aria-describedby="vaccinate_percentage"
                class="form-control form-control-sm"
                id="vaccinate_percentage"
                name="vaccinate_percentage"
                placeholder="Vaccinate Percentage"
                step="any"
                type="number"
                value="0.2"
              />
            </div>
            <div
              class="custom-control custom-switch switch-right"
            >
              <input
                checked=""
                class="custom-control-input"
                id="lockdown-switch"
                type="checkbox"
              />
              <label
                class="custom-control-label col-form-label-sm"
                for="lockdown-switch"
              >
                Lockdown
              </label>
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="lockdown_at_number_of_infections"
              >
                Lockdown at number of infections
              </label>
              <input
                aria-describedby="lockdown_at_number_of_infections"
                class="form-control form-control-sm"
                id="lockdown_at_number_of_infections"
                name="lockdown_at_number_of_infections"
                placeholder="Lockdown At(number of infections)"
                step="any"
                type="number"
                value="100"
              />
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="essential_workers_population"
              >
                Essentials Workers Population
              </label>
              <input
                aria-describedby="essential_workers_population"
                class="form-control form-control-sm"
                id="essential_workers_population"
                name="essential_workers_population"
                placeholder="Emergency Workers Population"
                step="any"
                type="number"
                value="0.1"
              />
            </div>
            <div
              class="custom-control custom-switch switch-right"
            >
              <input
                checked=""
                class="custom-control-input"
                id="hospital-switch"
                type="checkbox"
              />
              <label
                class="custom-control-label col-form-label-sm"
                for="hospital-switch"
              >
                Hospital Spread
              </label>
            </div>
            <div
              class="input-control"
            >
              <label
                class="col-form-label-sm"
                for="hospital_spread_rate_threshold"
              >
                Hospital Spread Rate Threshold
              </label>
              <input
                aria-describedby="hospital_spread_rate_threshold"
                class="form-control form-control-sm"
                id="hospital_spread_rate_threshold"
                name="hospital_spread_rate_threshold"
                placeholder="Hospital Spread Rate Threshold"
                step="any"
                type="number"
                value="100"
              />
            </div>
          </fieldset>
        </div>
        <div
          class="col actions"
        >
          <button
            class="btn btn-primary btn-lg"
            id="submitBtn"
            type="submit"
          >
            Submit
          </button>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
